--- a/.aerospace.toml
+++ b/.aerospace.toml
@@ -266,4 +266,4 @@ run = 'layout floating'
 
 [[on-window-detected]]
 if.app-id = 'com.bitwarden.desktop'
-run = 'layout floating'%
+run = 'layout floating'
